website_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: website
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  strategy: {}
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - image: dsamist/website
        name: website
        resources: {}
status: {}
