website_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
  name: website
spec:
  ports:
  - name: 3445-80
    port: 3445
    protocol: TCP
    targetPort: 80
  selector:
    app: website
  type: ClusterIP
status:
  loadBalancer: {}
